add start method

--- a/demo-app/index.html
+++ b/demo-app/index.html
@@ -42,8 +42,8 @@
         <script src="/qa-renderer.min.js"></script>
         <script>
             window.addEventListener("load", function(event) {
-                const runtime = new window.qa.Runtime('qa-container');
-                runtime.renderDialog(window.qaData);
+                const runtime = new window.qa.Runtime(window.qaData, 'qa-container');
+                runtime.start();
             });
 
         </script>
